@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8181ab392013f16299b9db56c5e92cf4dd087c4b ChangeLog
+SHA1 c83d3ea5c66262967d57597d624010c17d9d6f08 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 3e3a21d1e77e43d0025703328cab0b0f66fdf81d META.yml
-SHA1 1a537b62cb7072dd48e75179bb4876d6188d9451 Makefile.PL
+SHA1 7d28e5564d650424359fe07dc57fa6797fb3fc40 META.yml
+SHA1 c4e335121153573707f31bfffbfff87a52ee4bd1 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 20c8288b3e670b191709c356c881f5937c45f4d7 lib/Net/FullAuto.pm
+SHA1 0915cae2bd22a11fb7d8612cdaae49c7e2611668 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTq/9CAAoJEBa/9Pad787EAbQIAJEcR49DnRjnXScmjdBXS2S7
-t2PApOKfPhED2WGMWgLcdoaFuzr6gbOSmFdK1Bx/OQeH/wY++396FB4e9WIydYwu
-J5GByNLxDh0bmzFqU8n30d7ATZZSceaEi95UWdJM3vRD77tdQ3yJEGC/DXQKwvmS
-30TODG4NPyUnj4K7saXRCj2GgN3b6CrSANYVQcX5OCc5+1jAIrnzMpMsiH2/2TrS
-fM4+hSbDgIPryIy0BNGYtUaWa9PuoyXyqkXLKtiss4YxYsU88/DiKgvUv2zN6+os
-1JXBx1rosSLFKeZ1iEmm5xYDTD5RrhAHkYFH0A4wk7b9iDBNMGrJN1b2dG2cV68=
-=o59M
+iQEcBAEBAgAGBQJTrE73AAoJEBa/9Pad787ES78H/3wVj6ndF65Fs8RFVSrxjhsR
+ibyfJIEYR97SY+oGAypwC3Jr5LQBKdLG2XaImNQe5S41zbVpk3rRsfevweVwa26W
+FlWMzRpAzofHkUr7qUcd0U01/cvB5RnYj5LaWBljV+kyMEV/lnkVtXcBvvcM8Ke+
+7cprJA0uZs76KSeiDLShXwvxHXKQlQrRd/md5emYPZMtgechNq6kPfa7+XayGPpb
+AZL9t5glCU9cX4ZOKBHgpSYeIHWbqJnBgfvNzBScZbjK9KFVhPQCMlhUmX9kcia9
+IBzlJC+JdeDqLQAvqJFcn0UlvvJgS7XNdIO8Ler/24KAKW9nO4Gq5HZy5N7Ti/I=
+=8eUK
 -----END PGP SIGNATURE-----
